updates to test and paymentfactory